Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
None
-
None
Description
The user is seeing deadlocks on slave sql thread using parallel replication.
During the backup it causes the slave_sql_thread to stuck.
Affected version is all versions up to 10.6.19
This ticket is an addition to MDEV-30423, which did not completely fix the problem.
+--------+-------------+---------------------+---------+--------------+--------+-----------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+
|
| Id | User | Host | db | Command | Time | State | Info | Progress |
|
+--------+-------------+---------------------+---------+--------------+--------+-----------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+
|
| 6 | system user | | NULL | Slave_IO | 756023 | Waiting for master to send event | NULL | 0.000 |
|
| 8 | system user | | NULL | Slave_worker | 44471 | Waiting for backup lock | NULL | 0.000 |
|
| 9 | system user | | NULL | Slave_worker | 44471 | Waiting for prior transaction to commit | NULL | 0.000 |
|
| 10 | system user | | NULL | Slave_worker | 44471 | Waiting for prior transaction to commit | NULL | 0.000 |
|
| 11 | system user | | bankfrm | Slave_worker | 44471 | Waiting for backup lock | XA COMMIT ..... | 0.000 |
|
| 7 | system user | | NULL | Slave_SQL | 38598 | Waiting for room in worker thread event queue | NULL | 0.000 |
|
| 261485 | myoper | localhost | NULL | Query | 44471 | Waiting for backup lock | BACKUP STAGE BLOCK_COMMIT | 0.000 |
|
One of the commits is a XA transaction which causes the hang as it is waiting for a prior commits while BACKUP STAGE BLOCK_COMMIT blocks the prior commit to continue
Attachments
Issue Links
- causes
-
MDEV-39241 THD::backup_commit_lock warning dangling-pointer
-
- Stalled
-
- includes
-
MDEV-30423 Deadlock on Replica during BACKUP STAGE BLOCK_COMMIT on XA transactions
-
- Closed
-